<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="24dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:text="@string/all_details"
            android:textSize="21sp"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/all_subject"
            android:textColor="?android:textColorSecondary"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/attendanceDialogSubject"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:text="@string/all_no_data"
            android:textIsSelectable="true"
            android:textSize="16sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/all_description"
            android:textColor="?android:textColorSecondary"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/attendanceDialogDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:text="@string/all_no_data"
            android:textIsSelectable="true"
            android:textSize="16sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/all_date"
            android:textColor="?android:textColorSecondary"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/attendanceDialogDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:text="@string/all_no_data"
            android:textIsSelectable="true"
            android:textSize="16sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/attendance_number"
            android:textColor="?android:textColorSecondary"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/attendanceDialogNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:text="@string/all_no_data"
            android:textIsSelectable="true"
            android:textSize="16sp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/attendanceDialogClose"
            style="@style/Widget.MaterialComponents.Button.TextButton.Dialog"
            android:layout_width="wrap_content"
            android:layout_height="36dp"
            android:layout_marginTop="36dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:insetLeft="0dp"
            android:insetTop="0dp"
            android:insetRight="0dp"
            android:insetBottom="0dp"
            android:minWidth="88dp"
            android:layout_gravity="end"
            android:text="@string/all_close" />
    </LinearLayout>
</androidx.core.widget.NestedScrollView>
