<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:text="@string/all_details"
            android:textSize="20sp" />

        <ProgressBar
            android:id="@+id/mobileDeviceDialogProgress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:indeterminate="true"
            tools:visibility="invisible" />

        <TextView
            android:id="@+id/mobileDeviceDialogMessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="16sp"
            android:visibility="gone" />

        <LinearLayout
            android:id="@+id/mobileDeviceDialogContent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone"
            tools:visibility="visible">

            <ImageView
                android:id="@+id/mobileDeviceQr"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:contentDescription="@string/mobile_device_qr"
                android:paddingBottom="12dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mobile_device_token"
                android:textSize="17sp" />

            <TextView
                android:id="@+id/mobileDeviceDialogToken"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:text="@string/all_no_data"
                android:textIsSelectable="true"
                android:textSize="12sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/mobile_device_symbol"
                android:textSize="17sp" />

            <TextView
                android:id="@+id/mobileDeviceDialogSymbol"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:text="@string/all_no_data"
                android:textIsSelectable="true"
                android:textSize="12sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/mobile_device_pin"
                android:textSize="17sp" />

            <TextView
                android:id="@+id/mobileDeviceDialogPin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:text="@string/all_no_data"
                android:textIsSelectable="true"
                android:textSize="12sp" />
        </LinearLayout>

        <Button
            android:id="@+id/mobileDeviceDialogClose"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="15dp"
            android:text="@string/all_close"
            android:textAllCaps="true"
            android:textSize="15sp" />
    </LinearLayout>
</ScrollView>
